<resources>
    <string name="app_name" translatable="false">B Store</string>
    <string name="title_activity_main2">Welcome to BStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gihan Tharaka</string>
    <string name="nav_header_subtitle">gihantharaka76@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_category">Categories</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_login">Login</string>
    <string name="captain_marvel" translatable="false">"She's back! - With the galaxy behind her and her beloved earth in front, Carol gets ready for a homecoming a year in the making! - Except for the whole THE END IS NIGH thing..."</string>
    <string name="black_cat" translatable="false">"The Black Cat is back and starring in her first ever ongoing series! Felicia Hardy has a taste for the finer things in life and a certain set of skills that can get her into any mansion, vault or museum to…procure said finer things. But due to her actions in AMAZING SPIDER-MAN, Felicia’s not only on the run from the police but also by the New York Theives Guild and their boss ODESSA DRAKE! High-octane heists, climactic chases and twist after twist that will keep you on the edge of your seat like a cat on a perch."</string>
    <string name="spider_man">"The kidnapper turns out to be the Scorpion, who is working for Norman Osborn. They blackmail Spidey to break Norman out of jail for his Aunt's safety, and after apologising to his Uncle Ben at his grave, he goes through with it. During the breakout, Spidey (along with the Black Cat) is attacked by the new Sinister 12, which includes the Scorpion as the new Venom. The 12, with the exclusion of the Goblin and Venom, battle the two heroes until many of the Marvel heroes come to save the day. Spidey chases after the Goblin, but is ambushed by Venom, whom he defeats. Spidey finds the Goblin on the Brooklyn Bridge with his wife, Mary Jane Watson. The two battle, but are interrupted by Doctor Octopus, who has been brainwashed to kill the Goblin by a shadowy organization. Spidey defeats them both, saves MJ, and rescues his Aunt, who is buried alive and unharmed in the grave of his Uncle Ben."</string>
    <string name="titans">"Wolfman and Pérez's working relationship quickly evolved to the point where they were plotting the series jointly. Wolfman recalled that once George moved to the same town I lived in, only five blocks or so away, we usually got together for lunch and would work out a story over the next few hours. In many cases I would then go home and write up a plot based on it, or sometimes George would take the verbal plotting we did and take it from there."</string>
    <string name="killerwomen">"Lippman sets many of the stories in this sterling anthology, Hardly Knew Her, in familiar territory: her beloved Baltimore, from downtown to its affluent suburbs, where successful businessmen go to shocking lengths to protect what they have or ruthlessly expand their holdings, while dissatisfied wives find murderous ways to escape their lives. But Lippman is also unafraid to travel—to New Orleans, to an unnamed southwestern city, and even to Dublin, the backdrop for the lethal clash of two not-so-innocents abroad. Tess Monaghan is here, in two stories and a profile, aligning herself with various underdogs. And in her extraordinary, never-before-published novella, Scratch a Woman, Lippman takes us deep into the private world of a high-priced call girl/madam and devoted soccer mom, exploring the mystery of what may, in fact, be written in the blood.Each of these ingenious tales is a gem—sometimes poignant, sometimes humorous, always filled with delightfully unanticipated twists and reversals. For people who have yet to read Lippman, get ready to experience the spellbinding power of one of today's most pleasing storytellers, hailed for her keen psychological insights and her compelling characterizations, (San Diego Union-Tribune), who has invigorated the crime fiction arena with smart, innovative, and exciting work. As for longtime devotees of her multiple award-winning novels, you'll discover that you hardly know her."</string>
    <string name="theshuteye">"Five footprints are the only sign that Daniel Buck was ever here. And now they are all his mother has left.Every day, Anna Buck guards the little prints in the cement. Polishing them to a shine. Keeping them safe. Spiralling towards insanity. When a psychic offers hope, Anna grasps it. Who wouldn't? Maybe he can tell her what happened to her son ...But is this man what he claims to be? Is he a visionary? A shut eye? Or a cruel fake, preying on the vulnerable? Or is he something far, far worse?"</string>
    <string name="thestudent">"Do bad people look like good people, like friends and brothers and boyfriends and students, until they have their hands around your throat?Gatton, Queensland. 1994. Nate is a student, dealing weed on the side. A girl called Maya Kibby is dead. No one knows who killed her. Nate needs to refresh his supply, but Jesse, his friend and dealer, is missing. Nate is high. He is alone. Being hunted for the suitcase he’s found and haunted by its contents. And as things turn from bad to worse, Nate uncovers far more than he bargained for.The Student is high-paced, hardboiled regional noir: fresh, gritty, unnerving, with a stark and lonely beauty."</string>
    <string name="thosepeople">"Lowland Way is the suburban dream. The houses are beautiful, the neighbors get along, and the kids play together on weekends.But when Darren and Jodie move into the house on the corner, they don't follow the rules. They blast music at all hours, begin an unsightly renovation, and run a used-car business from their yard. It doesn't take long for an all-out war to start brewing.Then, early one Saturday, a horrific death shocks the street. As police search for witnesses, accusations start flying--and everyone has something to hide."</string>
    <string name="unsolvedchildmurders">"An estimated 800,000 children are reported missing each year in the United States. Only one in 10,000 are found dead. Yet unsolved child murders are almost a daily occurrence--of nearly 52,000 juvenile homicides between 1980 and 2008, more than 20 percent remain open. Drawing on FBI reports, police and court records, and interviews with victims' families, this book provides details and evidence for 18 unsolved cases from 1956 to 1998."</string>
    <string name="youletmein">"Nothing has felt right since Elle rented out her house . . .There’s a new coldness. A shift in the atmosphere. The prickling feeling that someone is watching her every move from the shadows."</string>
    <string name="dracula" translatable="false">"In these Golden Classics we present two works of universal literature: Dracula and Frankenstein. Bram Stoker Novelist and Irish writer. He belonged to the Golden Dawn secret society, in which famous writers met to discuss occult and esoteric themes. The story of Dracula begins when Jonathan Harker, a young lawyer, travels from London to Transylvania to visit his client: Count Dracula, who lives in a tenebrous castle. Dr. Van Helsing, Seward, Arthur, Quincey, Mina and Jonathan discover the misdeeds of Count Dracula, a fearsome vampire, and bravely decide to pursue and kill him. Mary W. Shelley. Novelist, narrator, dramatist, essayist, philosopher and British biographer. He possessed great intellectual tenacity and advanced education. Frankenstein's novel tells the story of Victor Frankenstein, who lived happily in Switzerland, but when his mother died he promised to be a great doctor and beat death. In the laboratory of his house, in England, he put together a monstrous being. One stormy night he placed it in the rain, a lightning bolt fell on him and it came to life. However, the horrible being, driven by hatred, caused him great harm. By challenging the laws of nature Victor received a great lesson ..."</string>
    <string name="nakedshedied">"Fort Beauregard was one of the oldest and loveliest military posts in the country. And it was one of the most peaceful -- until M.P. Sergeant Giff Speer arrived for what could have been a routine investigation. But even before he unpacked his bags, a forty-five slug crashed through his window -- a near miss!Within a week, two people were murdered, Speer himself had been beaten twice, and all clues pointed to For Beauregard as a corrupt hellhole of sex, blackmail, smuggling and even Communist subversion."</string>
    <string name="thecarrowhuant">""The dead are restless here..."Remy is a tour guide for Carrow House, a notoriously haunted building. When she's asked to host seven guests for a week-long stay to research Carrow's phenomena, she hopes to finally experience some of the sightings that made the house famous.At first, it's everything they hoped for. Then a storm moves in, cutting off their contact with the outside world, and things quickly become twisted. Doors open on their own. Seances go disastrously wrong. Red liquid seeps from behind the wallpaper. Their spirit medium wanders through the house during the night, seemingly in a trance.Then one of the guests dies under strange circumstances, and Remy is forced to consider the possibility that the ghost of the house's original owner, a twisted serial killer, still walks the halls"</string>
    <string name="thesentinel">"A beautiful young model. The old brownstone apartment she simply had to have. The grotesque blind priest who watched down on her day and night from an upper-story window. The pair of perverted creatures who wanted her to join their circle. The mad little old man who gave her tea and sympathy. The cool, calculating, supremely rational lover who first mocked her fears.And the secret you will never be able to forget, even if you try..."</string>
    <string name="theslleeproom">"When promising young psychiatrist James Richardson is offered the job opportunity of a lifetime by the charismatic Dr. Hugh Maitland, he is thrilled. Setting off to take up his post at Wyldehope Hall in deepest Suffolk, Richardson doesn’t look back. One of his tasks is to manage Maitland’s most controversial project—a pioneering therapy in which extremely disturbed patients are kept asleep for months. If this radical and potentially dangerous procedure is successful, it could mean professional glory for both doctors.As Richardson settles into his new life, he begins to sense something uncanny about the sleeping patients—six women, forsaken by society. Why is Maitland unwilling to discuss their past lives? Why is the trainee nurse so on edge when she spends nights alone with them? And what can it mean when all the sleepers start dreaming at the same time? In this atmospheric reinvention of the ghost story, Richardson finds himself questioning everything he knows about the human mind, as he attempts to uncover the shocking secrets of The Sleep Room . . ."</string>
    <string name="msg1">Name</string>
    <string name="msg2">E-mail</string>
    <string name="msg3">Contact Number</string>
    <string name="msg4">Message</string>
    <string name="btn1" translatable="false">SUBMIT</string>
    <string name="btn2" translatable="false">SHOW ALL</string>
</resources>